--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign":"4.1.0",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "mongoose": "^4.9.10"
   },
   "engine": {
     "node": "*",
